# music-player

./: .gitignore  main.py  pyproject.toml
qt_music_player.egg-info/: PKG-INFO  SOURCES.txt
